@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-05T16:19:06Z",
+  "timestamp" : "2024-02-06T08:19:25Z",
   "count_outdated" : 6541,
   "uniques_outdated" : 2522,
-  "count" : 6738,
-  "uniques" : 2666,
+  "count" : 6739,
+  "uniques" : 2667,
   "clones" : [
     {
       "timestamp": "2024-01-23T00:00:00Z",
-      "count": 38,
+      "count": 36,
       "count_minmax": [ 2, 38 ],
-      "count_decinc": [ 0, 38 ],
-      "uniques": 31,
+      "count_decinc": [ 2, 38 ],
+      "uniques": 30,
       "uniques_minmax": [ 2, 31 ],
-      "uniques_decinc": [ 0, 31 ]
+      "uniques_decinc": [ 1, 31 ]
     },
     {
       "timestamp": "2024-01-24T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 12,
       "uniques_minmax": [ 12, 12 ],
       "uniques_decinc": [ 0, 12 ]
+    },
+    {
+      "timestamp": "2024-02-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
