@@ -1,11 +1,11 @@
 {
-  "count": 197,
-  "uniques": 108,
+  "count": 196,
+  "uniques": 107,
   "clones": [
     {
       "timestamp": "2024-01-23T00:00:00Z",
-      "count": 38,
-      "uniques": 31
+      "count": 36,
+      "uniques": 30
     },
     {
       "timestamp": "2024-01-24T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 14,
       "uniques": 12
+    },
+    {
+      "timestamp": "2024-02-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
